--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -365,7 +365,7 @@ div.wysiwyg ul.toolbar {
   border-top: 1px solid $light-border;
   margin: 10px 0; }
 
-#builder .edit-area.edit-settings {
+#builder .edit-area.edit-settings, #builder .edit-area.edit-advanced-settings {
   padding-top: 8px;
   .box {
     margin: 10px 0px 0px 0px;
