--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -628,18 +628,18 @@ div.wysiwyg ul.toolbar {
   cursor: pointer; }
 
 .color-picker {
-  background: transparent url(/images/ui/color-select.png) no-repeat;
+  background: transparent url(/images/color-picker/select2.png) no-repeat;
   height: 36px;
   width: 72px;
   position: relative; }
 
 .color-picker div {
   position: absolute;
-  top: 3px;
-  left: 3px;
-  width: 66px;
-  height: 30px;
-  background: url(/images/ui/color-select.png) center; }
+  top: 6px;
+  left: 6px;
+  width: 64px;
+  height: 28px;
+  background: url(/images/color-picker/select2.png) center; }
 
 div.plupload {
   cursor: pointer; }
