--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -726,16 +726,16 @@ div.wysiwyg ul.toolbar {
 }
 
 .color-picker {
-  background: transparent url(/images/ui/color-select.png) no-repeat;
+  background: transparent url(/images/color-picker/select2.png) no-repeat;
   height: 36px;
   width: 72px;
   position: relative;
 }
 .color-picker div {
   position: absolute;
-  top: 3px; left: 3px;
-  width: 66px; height: 30px;
-  background: url(/images/ui/color-select.png) center;
+  top: 6px; left: 6px;
+  width: 64px; height: 28px;
+  background: url(/images/color-picker/select2.png) center;
 }
 
 div.plupload {
