--- a/app/views/mobile/_custom-style.html.erb
+++ b/app/views/mobile/_custom-style.html.erb
@@ -2,7 +2,20 @@
 
 .company-info {
   <% if @company.settings.header_color %>
+  <% @color = @company.settings.header_color %>
   background: <%= @company.settings.header_color %>;
+  /* IE10 */
+  background-image: -ms-linear-gradient(top, <%= @color %> 0%, #FFFFFF 275%);
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(top, <%= @color %> 0%, #FFFFFF 275%);
+  /* Opera */
+  background-image: -o-linear-gradient(top, <%= @color %> 0%, #FFFFFF 275%);
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, <%= @color %>), color-stop(2.75, #FFFFFF));
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(top, <%= @color %> 0%, #FFFFFF 275%);
+  /* Proposed W3C Markup */
+  background-image: linear-gradient(top, <%= @color %> 0%, #FFFFFF 275%);
   <% end %>
 }
 
