--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -3,3 +3,4 @@
   a href="http://help.yomobi.com" target="_blank" Help
   a href=account_path Account Settings
   a href=builder_main_path Website Builder
+  a href=site_manager_path Site Manager
