Implemented "create site" dialog. Part of #135

--- a/app/views/layouts/_js-base.html.slim
+++ b/app/views/layouts/_js-base.html.slim
@@ -1,5 +1,10 @@
+= javascript_include_tag 'support/json2.min'
+
+= javascript_include_tag 'support/jquery-1.6.2.min'
 = javascript_include_tag 'support/jquery-ui-1.8.17.custom.min'
 = javascript_include_tag 'support/jquery.tooltip.v.1.1'
+= render 'shared/jquery-auth-patch'
+
 = javascript_include_tag 'support/underscore'
 = javascript_include_tag 'support/backbone'
 = javascript_include_tag 'util', 'builder.util'
