--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -28,3 +28,14 @@ ul.fancy-selectable {
 #admins-container {
   float: left;
 }
+
+form#account-setup-box.dialog {
+  .loading { display: none; }
+}
+
+form#account-setup-box.dialog.submitting {
+  .fields { display: none; }
+  .loading {
+    display: block;
+  }
+}
