--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -24,3 +24,11 @@ ul.fancy-selectable {
 
 #admins-container {
   float: left; }
+
+form#account-setup-box.dialog .loading {
+  display: none; }
+
+form#account-setup-box.dialog.submitting .fields {
+  display: none; }
+form#account-setup-box.dialog.submitting .loading {
+  display: block; }
