--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -1,12 +1,60 @@
 - content_for :css do
   = stylesheet_link_tag 'site-manager'
 
+- content_for :js do
+  = render 'layouts/js-base'
+  erb:
+    <script type="text/javascript">
+    window._sitesData = <%=raw @companies.to_json %>;
+    window.g = {
+      activateSitePath: "<%=raw activate_site_path(77).gsub '77','' %>",
+      createSitePath: "<%=raw create_site_path %>",
+      addAdminPath: "<%=raw add_admin_path %>"
+    };
+    </script>
+  = javascript_include_tag 'site-manager'
+
+#manager-container
+  .site-list-wrap
+    h2 Sites you have access to:
+    ul.sites.fancy-selectable
+    button.edit Edit Site
+    button.create Create New Site
+    button.make-default Make Default
+  .site-details-wrap
+    h2 Site Details
+    .details
+      h3.active-site Please select a site on the left.
+      button disabled="disabled" Generate Signup Key
+      ul.admins.fancy-selectable
+      button disabled="disabled" Add Collaborator
+      button disabled="disabled" Revoke Access
+      button disabled="disabled" Concede Ownership
+  .clearfix
+
+
 #templates
   script.site-li(type="text/template")
     span.url YoMobi.com/{{ url }}
 
+  script.site-details(type="text/template")
+    h3.active-site Selected: YoMobi.com/{{ url }}
+    button Generate Signup Key
+    ul.admins.fancy-selectable
+      | <% for (var i=0; i < admins.length; i++) { %>
+      li
+        img src="http://www.yomobi.com/images/default-logo_mobile.png"
+        .name {{ admins[i].email }}
+      | <% } %>
+    button.add-admin Add Collaborator
+    button Revoke Access
+    button Concede Ownership
+
+  script.admin(type="text/template")
+    span.url YoMobi.com/{{ name }}
+
   script.new-site-dialog(type="text/template")
-    form#account-setup-box.dialog title="Create a New Site"
+    form#account-setup-box.new-site.dialog title="Create a New Site"
       .fields
         h3 Site Name
         | <% if (errors.title) { %>
@@ -43,39 +91,20 @@
       .loading
         h3 Submitting...
         img src="/images/ui/ajax-loader-small.gif"
+  
+  script.add-admin-dialog(type="text/template")
+    form#account-setup-box.add-admin.dialog title="Add Collaborator"
+      .fields
+        h3 Collaborator's email:
+        | <% if (errors.email) { %>
+        p.error Sorry, there is no YoMobi account associated with that email.
+        | <% } %>
+        | <% if (errors.self) { %>
+        p.error You cannot add yourself as a collaborator.
+        | <% } %>
+        input type="text" name="email" value="{{ email }}"
 
-- content_for :js do
-  = render 'layouts/js-base'
-  erb:
-    <script type="text/javascript">
-    window._sitesData = <%=raw @companies.to_json %>;
-    window.g = {
-      activateSitePath: "<%=raw activate_site_path(77).gsub '77','' %>",
-      createSitePath: "<%=raw create_site_path %>"
-    };
-    </script>
-  = javascript_include_tag 'site-manager'
-
-#manager-container
-  #sites-container
-    ul.sites.fancy-selectable
-    button.edit Edit Site
-    button.create Create New Site
-    button.make_default Make Default
-  #admins-container
-    h3.active-site yomobi.com/site-a
-    button Generate Signup Key
-    ul#admins.fancy-selectable
-      li
-        img src="http://www.yomobi.com/images/default-logo_mobile.png"
-        .name me@gmail.com
-      li
-        img src="http://www.yomobi.com/images/default-logo_mobile.png"
-        .name some_other_guy@gmail.com
-      li
-        img src="http://www.yomobi.com/images/default-logo_mobile.png"
-        .name some_other_guy_with_a_longer_email@gmail.com
-    button Add Collaborator
-    button Revoke Access
-    button Concede Ownership
-  .clearfix
+        input type="hidden" name="site_id" value="{{ id }}"
+      .loading
+        h3 Submitting...
+        img src="/images/ui/ajax-loader-small.gif"
