--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -7,7 +7,8 @@ ul.fancy-selectable {
   ul.fancy-selectable li {
     padding: 6px 10px;
     border: 1px solid #b3b3b3;
-    margin-bottom: 4px; }
+    margin-bottom: 4px;
+    cursor: pointer; }
   ul.fancy-selectable li.ui-selecting {
     background: #FECA40; }
   ul.fancy-selectable li.ui-selected {
