Updated text due to consolidation of widgets.

--- a/app/views/builder/_cat-dialog-templates.slim
+++ b/app/views/builder/_cat-dialog-templates.slim
@@ -76,7 +76,7 @@ script.services-item-dialog-content(type="text/template")
   br
 
 script.products-item-dialog-content(type="text/template")
-  p Product Information:
+  p Item Information:
   label Name*
   br
   input.item-input type="text" value="{{ _maybe.name }}" name="name"
