--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -353,7 +353,7 @@ script.video-edit-area.full-website-edit-area.news-edit-area.photo-bucket-edit-a
   input(name="url" type="text" value="{{ _maybe.url }}")
 
 script.link-edit-area(type="text/template")
-  label Website URL*:
+  label URL*:
   input(name="url" type="text" value="{{ _maybe.url }}")
 
 script.event-calendar-edit-area(type="text/template")
