--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -30,7 +30,9 @@ ul.fancy-selectable {
 
 .site-details-wrap {
   float: left;
-  margin: 20px;
+  padding: 20px;
+  padding-left: 20px;
+  border-left: 1px solid #B3B3B3;  
   ul.admins {
     height: 230px;
     overflow: auto;
