--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -12,10 +12,11 @@ $light-border: #b3b3b3;
 $page-width: 960px;
 
 $dynamic-width: 320px;
-$color-topbar: #405b80 url(/images/bg-mobile-header.png);
+$color-topbar: #2a426a;
 
 
 $back-bar-color: #333;
+$back-bar-bg-color: #B8B8B8;
 $back-bar-title-font-size: 12px;
 $back-bar-title-width: 250px;
 
@@ -104,17 +105,17 @@ p {
   margin: 12px 0 12px 0;
   background: url(/images/ui/bg-back-bar.png) repeat-x;
   /* IE10 */ 
-  background-image: -ms-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  background-image: -ms-linear-gradient(top, #FFFFFF 0%, $back-bar-bg-color 50%);
   /* Mozilla Firefox */ 
-  background-image: -moz-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  background-image: -moz-linear-gradient(top, #FFFFFF 0%, $back-bar-bg-color 50%);
   /* Opera */ 
-  background-image: -o-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  background-image: -o-linear-gradient(top, #FFFFFF 0%, $back-bar-bg-color 50%);
   /* Webkit (Safari/Chrome 10) */ 
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(.5, #B8B8B8));
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(.5, $back-bar-bg-color));
   /* Webkit (Chrome 11+) */ 
-  background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  background-image: -webkit-linear-gradient(top, #FFFFFF 0%, $back-bar-bg-color 50%);
   /* Proposed W3C Markup */ 
-  background-image: linear-gradient(top, #FFFFFF 0%, #B8B8B8 50%);
+  background-image: linear-gradient(top, #FFFFFF 0%, $back-bar-bg-color 50%);
 
   color: $back-bar-color;
   .title {
@@ -134,8 +135,21 @@ p {
 .company-info {
   width: 100%;
   padding-left: 0 1px 0 8px;
-  background: $color-topbar;
   color: white;
+  background: $color-topbar;
+  /* IE10 */
+  background-image: -ms-linear-gradient(bottom, $color-topbar 0%, #FFFFFF 500%);
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(bottom, $color-topbar 0%, #FFFFFF 500%);
+  /* Opera */
+  background-image: -o-linear-gradient(bottom, $color-topbar 0%, #FFFFFF 500%);
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, $color-topbar), color-stop(5, #FFFFFF));
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(bottom, $color-topbar 0%, #FFFFFF 500%);
+  /* Proposed W3C Markup */
+  background-image: linear-gradient(bottom, $color-topbar 0%, #FFFFFF 500%);
+
   table { height: 36px; }
   td {
     vertical-align: center; }
