Renamed Header Color to Header Background

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -233,7 +233,7 @@ script.edit-settings(type="text/template")
         tbody
           tr
             td
-              label Header Color:
+              label Header Background:
             td
               .color-picker data-color="{{ header_color }}" data-target="header_color"
                 div style="background-color:{{ header_color }}"
