Embedded new video

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -25,7 +25,7 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
 #signup-box
   erb:
     <iframe width="500" height="333"
-          src="http://www.youtube.com/embed/N-I5yx6KpRQ?hl=en&fs=1&hd=1"
+          src="http://www.youtube.com/embed/6XwMs97cwOo?hl=en&fs=1&hd=1"
           frameborder="0"
           allowfullscreen
     ></iframe>
