Updated to use the HD version of the promotional video

--- a/app/views/home/easy.html
+++ b/app/views/home/easy.html
@@ -1,7 +1,7 @@
 
 <div id="easy">
   <iframe width="640" height="390"
-          src="http://www.youtube.com/embed/6XwMs97cwOo?hl=en&fs=1&hd=1"
+          src="http://www.youtube.com/embed/2KeD34NhYB4?hl=en&fs=1&hd=1"
           frameborder="0"
           allowfullscreen
   ></iframe>
