Updated to use vimeo for video embed.
Vimeo lets me control the splash screen for the video, so I switched
out from youtube to vimeo. Since the video size changed, I updated the
css to reposition the video.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -24,9 +24,10 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
 
 #signup-box
   erb:
-    <iframe width="500" height="333"
-          src="http://www.youtube.com/embed/2KeD34NhYB4?hl=en&fs=1&hd=1"
+    <iframe width="500" height="285"
+         src="http://player.vimeo.com/video/35586337?title=0&amp;byline=0&amp;portrait=0"
           frameborder="0"
-          allowfullscreen
+          webkitAllowFullScreen mozallowfullscreen allowfullscreen 
     ></iframe>
 .clearfix
+
