--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -40,6 +40,7 @@ ul.fancy-selectable {
   padding: 20px;
   padding-left: 20px;
   border-left: 1px solid #B3B3B3;  
+  .signup-key {}
   ul.admins {
     height: 230px;
     overflow: auto;
