--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -22,6 +22,12 @@ ul.fancy-selectable {
   border-top: none;
 }
 
+h2.active-site {
+  margin: 0;
+  padding: 10px;
+  border-bottom: 1px solid #b3b3b3;
+}
+
 .site-list-wrap {
   float: left;
   width: 360px;
