--- a/public/stylesheets/site-manager.css
+++ b/public/stylesheets/site-manager.css
@@ -20,6 +20,11 @@ ul.fancy-selectable {
   border: 1px solid #b3b3b3;
   border-top: none; }
 
+h2.active-site {
+  margin: 0;
+  padding: 10px;
+  border-bottom: 1px solid #b3b3b3; }
+
 .site-list-wrap {
   float: left;
   width: 360px;
